# IMGSRV

./: .editorconfig  .gitignore  README.md  example-config.json  optional-requirements.txt  pm2.json  pyproject.toml  requirements.txt  server.py
assets/: colorNames.json
endpoints/: abandon.py  achievement.py  america.py  animeprotest.py  armor.py  art.py  blur.py  blurple.py  bolsonaro.py  bonzibuddy.py  brain.py  brazzers.py  changemymind.py  chatroulette.py  circlecrop.py  citation.py  clint.py  clippy.py  color.py  dbots.py  dbotspreview.py  deepfry.py  disability.py  dissector.py  distort.py  dogbite.py  durv.py  eliminated.py  facts.py  fakenews.py  fireengine.py  firstwords.py  flip.py  flop.py  folder.py  garfield.py  glitch.py  glitchgif.py  grayscale.py  hitler.py  (+45 more)
utils/: asset_cache.py  color_ops.py  db.py  endpoint.py  exceptions.py  glitch.py  gm.py  http.py  perspective.py  textutils.py  transparent_gif.py
