[project]
name = "imgsrv"
version = "0.1.0"
description = "Image generation microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask==3.1.3",
  "pillow==12.1.1",
  "requests[socks]==2.32.5",
  "wand==0.7.0",
  "sentry-sdk==2.53.0",
  "redis==7.2.1",
  "numpy==2.4.2",
  "cairosvg==2.8.2",
  "apng==0.3.4",
  "lottie==0.7.2",
  "colour==0.1.5",
]

[project.optional-dependencies]
perf = [
  "ujson==5.11.0",
  "hiredis==3.3.0",
  "pillow-simd==9.5.0.post2; platform_system != 'Windows'",
]
dev = [
  "black==26.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
